test/tests/BadAnnotations2.expected
BadAnnotations2.frost:2:5: error: '@class' annotation may not be used outside of a class
BadAnnotations2.frost:5:1: error: '@class' annotation may not be used outside of a class
2 errors
