test/tests/BadAnnotations2.frost
@class
def x := 10

@class
method main() {
}